--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
         "onCommand:azureVirtualMachines.openInPortal",
         "onCommand:azureVirtualMachines.viewProperties",
         "onCommand:azureVirtualMachines.reportIssue",
+        "onCommand:azureVirtualMachines.setSshPort",
+        "onCommand:azureVirtualMachines.createAzureVPN",
         "onView:azVmTree"
     ],
     "main": "./main.js",
@@ -129,6 +131,16 @@
             {
                 "command": "azureVirtualMachines.reportIssue",
                 "title": "%azureVirtualMachines.reportIssue%",
+                "category": "Azure Virtual Machines"
+            },
+            {
+                "command": "azureVirtualMachines.setSshPort",
+                "title": "%azureVirtualMachines.setSshPort%",
+                "category": "Azure Virtual Machines"
+            },
+            {
+                "command": "azureVirtualMachines.createAzureVPN",
+                "title": "%azureVirtualMachines.createAzureVPN%",
                 "category": "Azure Virtual Machines"
             }
         ],
@@ -223,6 +235,16 @@
                     "command": "azureVirtualMachines.addSshKey",
                     "when": "view == azVmTree && viewItem == linuxVirtualMachine",
                     "group": "1@3"
+                },
+                {
+                    "command": "azureVirtualMachines.setSshPort",
+                    "when": "view == azVmTree && viewItem == linuxVirtualMachine",
+                    "group": "1@4"
+                },
+                {
+                    "command": "azureVirtualMachines.createAzureVPN",
+                    "when": "view == azVmTree && viewItem == linuxVirtualMachine",
+                    "group": "3@3"
                 }
             ],
             "explorer/context": [],
@@ -280,6 +302,7 @@
         "@types/gulp": "^4.0.8",
         "@types/mocha": "^8.2.2",
         "@types/node": "^12.19.16",
+        "@types/ssh2": "^0.5.47",
         "@types/vscode": "1.48.0",
         "@types/which": "^1.3.2",
         "@typescript-eslint/eslint-plugin": "^4.28.3",
@@ -305,10 +328,14 @@
         "@azure/arm-network-profile-2020-09-01-hybrid": "^1.0.0",
         "@azure/arm-resources": "^4.0.0",
         "@azure/arm-resources-profile-2020-09-01-hybrid": "^1.0.0",
+        "@types/async": "^3.2.7",
+        "async": "^3.2.0",
         "fs-extra": "^8.1.0",
         "open": "^8.0.4",
         "semver": "^5.7.0",
         "ssh-config": "^4.0.5",
+        "ssh2": "1.1.0",
+        "ssh2shell": "^1.9.4",
         "vscode-azureextensionui": "^0.46.0",
         "vscode-nls": "^4.1.0",
         "which": "^2.0.2"
