--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
         "onCommand:azureVirtualMachines.openInPortal",
         "onCommand:azureVirtualMachines.viewProperties",
         "onCommand:azureVirtualMachines.reportIssue",
-        "onCommand:azureVirtualMachines.setSshPort",
-        "onCommand:azureVirtualMachines.setDevEnvironment",
+        "onCommand:azureVirtualMachines.VirtualMachineDevEnvironmentStep",
         "onCommand:azureVirtualMachines.createAzureVPN",
         "onView:azVmTree"
     ],
@@ -135,13 +134,8 @@
                 "category": "Azure Virtual Machines"
             },
             {
-                "command": "azureVirtualMachines.setSshPort",
-                "title": "%azureVirtualMachines.setSshPort%",
-                "category": "Azure Virtual Machines"
-            },
-            {
-                "command": "azureVirtualMachines.setDevEnvironment",
-                "title": "%azureVirtualMachines.setDevEnvironment%",
+                "command": "azureVirtualMachines.VirtualMachineDevEnvironmentStep",
+                "title": "%azureVirtualMachines.VirtualMachineDevEnvironmentStep%",
                 "category": "Azure Virtual Machines"
             },
             {
@@ -243,14 +237,9 @@
                     "group": "1@3"
                 },
                 {
-                    "command": "azureVirtualMachines.setSshPort",
+                    "command": "azureVirtualMachines.VirtualMachineDevEnvironmentStep",
                     "when": "view == azVmTree && viewItem == linuxVirtualMachine",
                     "group": "1@4"
-                },
-                {
-                    "command": "azureVirtualMachines.setDevEnvironment",
-                    "when": "view == azVmTree && viewItem == linuxVirtualMachine",
-                    "group": "1@5"
                 },
                 {
                     "command": "azureVirtualMachines.createAzureVPN",
