fix: username and email in spec file to be same as Azure Account

--- a/src/files/c_project/Makefile
+++ b/src/files/c_project/Makefile
@@ -1,9 +1,9 @@
-cello:
-	gcc -g -o main main.c
+{{name}}:
+	gcc -g -o {{name}} main.c
 
 clean:
-	rm main
+	rm {{name}}
 
 install:
 	mkdir -p $(DESTDIR)/usr/bin
-	install -m 0755 main $(DESTDIR)/usr/bin/main
+	install -m 0755 {{name}} $(DESTDIR)/usr/bin/{{name}}
